--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Search App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -14,6 +15,20 @@
                 <input type="text" name="pokemon" id="search-input" required>
                 <button id="search-button">Search</button>
             </form>
+            <div class="output">
+                <div class="top-container">
+                    <div class="name-and-id">
+                        <span id="pokemon-name"></span>
+                        <span id="pokemon-id"></span>
+                    </div>
+                    <div class="size">
+                        <span id="weight"></span>
+                        <span id="height"></span>
+                    </div>
+                    <div id=""></div>
+                    <div id=""></div>
+                </div>
+            </div>
         </div>
     </main>
    <script src="script.js"></script> 
