--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <div class="container">
             <form role="search" id="search-form">
                 <label for="search-input">Search for Pokémon Name or ID:</label>
+                <div>
                 <input type="text" name="pokemon" id="search-input" required>
                 <button id="search-button">Search</button>
+                </div>
             </form>
             <div class="output">
                 <div class="top-container">
