--- a/index.html
+++ b/index.html
@@ -27,9 +27,39 @@
                         <span id="weight"></span>
                         <span id="height"></span>
                     </div>
-                    <div id=""></div>
-                    <div id=""></div>
+                    <div id="sprite-continer"></div>
+                    <div id="types"></div>
                 </div>
+            </div>
+            <div class="bottom-container">
+                <table>
+                    <tbody>
+                        <tr>
+                            <th>Base</th>
+                            <th>Stats</th>
+                        </tr>
+                        <tr>
+                            <td>Attack:</td>
+                            <td id="attack"></td>
+                        </tr>
+                        <tr>
+                            <td>Defense:</td>
+                            <td id="defense"></td>
+                        </tr>
+                        <tr>
+                            <td>Sp. Attack:</td>
+                            <td id="special-attack"></td>
+                        </tr>
+                        <tr>
+                            <td>Sp. Defense:</td>
+                            <td id="special-defense"></td>
+                        </tr>
+                        <tr>
+                            <td>Speed:</td>
+                            <td id="speed"></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </main>
