--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <main>
-        <h1>Pokémon Search App</h1>
+        <img src="pokemon-logo-png-1423.png" alt="pokemon logo" width="200" height="90">
+        <h1>
+            <img src="Title.png" alt="search app title" width="200" height="90">
+        </h1>
         <div class="container">
             <form role="search" id="search-form">
                 <label for="search-input">Search for Pokémon Name or ID:</label>
