--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <main>
-        <img src="pokemon-logo-png-1423.png" alt="pokemon logo" width="200" height="90">
+        <img src="Pics/pokemon-logo-png-1423.png" alt="pokemon logo" width="200" height="90">
         <h1>
-            <img src="Title.png" alt="search app title" width="200" height="90">
+            <img src="Pics/Title.png" alt="search app title" width="200" height="90">
         </h1>
         <div class="container">
             <form role="search" id="search-form">
