--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <main>
         <h1>
-        <img src="Pics/Logo1.png" alt="pokemon logo" width="250" height="100">
-        <img src="Pics/Logo2.png" alt="pokemon logo" width="250" height="100">
+        <img src="Pics/Logo1.png" alt="Pokemon logo" width="250" height="100">
+        <img src="Pics/Logo2.png" alt="Title" width="250" height="100">
         </h1>
         <div class="container">
             <form role="search" id="search-form">
