--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <span id="weight"></span>
                         <span id="height"></span>
                     </div>
-                    <div id="sprite-continer"></div>
+                    <div id="sprite-container" class="sprite-container"></div>
                     <div id="types"></div>
                 </div>
             </div>
