--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Search App</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/e4b53298eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
@@ -42,23 +43,23 @@
                             <th>Stats</th>
                         </tr>
                         <tr>
-                            <td>Attack:</td>
+                            <td>Attack<i class="fa-solid fa-bolt-lightning"></i></td>
                             <td id="attack"></td>
                         </tr>
                         <tr>
-                            <td>Defense:</td>
+                            <td>Defense<i class="fa-solid fa-shield-halved"></i></td>
                             <td id="defense"></td>
                         </tr>
                         <tr>
-                            <td>Sp. Attack:</td>
+                            <td>Sp. Attack<i class="fa-solid fa-meteor"></i></td>
                             <td id="special-attack"></td>
                         </tr>
                         <tr>
-                            <td>Sp. Defense:</td>
+                            <td>Sp. Defense<i class="fa-solid fa-shield"></i></td>
                             <td id="special-defense"></td>
                         </tr>
                         <tr>
-                            <td>Speed:</td>
+                            <td>Speed <i class="fa-solid fa-tornado"></i></td>
                             <td id="speed"></td>
                         </tr>
                     </tbody>
