Ad HP base +  icon

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                             <th>Stats</th>
                         </tr>
                         <tr>
+                            <td>HP<i class="fa-solid fa-battery-full"></i></td>
+                            <td id="hp"></td>
+                        </tr>
+                        <tr>
                             <td>Attack<i class="fa-solid fa-bolt-lightning"></i></td>
                             <td id="attack"></td>
                         </tr>
