--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <td id="hp"></td>
                         </tr>
                         <tr>
-                            <td>Attack<i class="fa-solid fa-bolt-lightning"></i></td>
+                            <td>Attack<i class="fa-solid fa-dragon"></i></td>
                             <td id="attack"></td>
                         </tr>
                         <tr>
@@ -55,7 +55,7 @@
                             <td id="defense"></td>
                         </tr>
                         <tr>
-                            <td>Sp. Attack<i class="fa-solid fa-meteor"></i></td>
+                            <td>Sp. Attack<i class="fa-brands fa-d-and-d"></i></td>
                             <td id="special-attack"></td>
                         </tr>
                         <tr>
@@ -63,7 +63,7 @@
                             <td id="special-defense"></td>
                         </tr>
                         <tr>
-                            <td>Speed <i class="fa-solid fa-tornado"></i></td>
+                            <td>Speed<i class="fa-solid fa-bolt-lightning"></i></td>
                             <td id="speed"></td>
                         </tr>
                     </tbody>
