--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <td id="defense"></td>
                         </tr>
                         <tr>
-                            <td>Sp. Attack<i class="fa-brands fa-d-and-d"></i></td>
+                            <td>Sp. Attack<i class="fa-solid fa-ghost"></i></td>
                             <td id="special-attack"></td>
                         </tr>
                         <tr>
