--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                             <td id="defense"></td>
                         </tr>
                         <tr>
-                            <td>Sp. Attack<i class="fa-solid fa-ghost"></i></td>
+                            <td>Sp. Attack<i class="fa-solid fa-spaghetti-monster-flying"></i></td>
                             <td id="special-attack"></td>
                         </tr>
                         <tr>
-                            <td>Sp. Defense<i class="fa-solid fa-shield"></i></td>
+                            <td>Sp. Defense<i class="fa-solid fa-ghost"></i></td>
                             <td id="special-defense"></td>
                         </tr>
                         <tr>
